<resources>
    <string name="app_name">Engent</string>

    <!-- Basic Strings -->
    <string name="content_description">Basic Content Description</string>

    <!-- Title Strings -->
    <string name="title_username">Username</string>
    <string name="title_password">Password</string>
    <string name="title_login">Login</string>
    <string name="title_create_account">Create Account?</string>
    <string name="title_forgot_password">Forgot Password?</string>

    <!-- Error Strings -->
    <string name="error_generic_message">An Error has occurred!</string>
    <string name="error_missing_user_and_pass">Please enter your username and password!</string>
    <string name="error_missing_username">Please enter your username!</string>
    <string name="error_missing_password">Please enter your password!</string>
</resources>
