<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#CCFF0000"
        android:weightSum="10">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6">
        <ProgressBar
                android:id="@+id/loading_bar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:indeterminate="true"
                android:visibility="gone"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="#000000"
                android:layout_centerInParent="true" />
        <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/title_username"
                android:hint="@string/title_username"
                android:inputType="text"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#ffffff"
                android:backgroundTint="#ffffff"
                android:textSize="20sp"/>
        <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/username"
                android:autofillHints="@string/title_password"
                android:hint="@string/title_password"
                android:inputType="textPassword"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColorHint="#ffffff"
                android:backgroundTint="#ffffff"
                android:textSize="20sp"/>
        <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/password"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/title_login"
                android:textColor="#ffffff "
                android:textSize="20sp"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/login"
                android:orientation="horizontal"
                android:weightSum="2">
            <Button
                    android:id="@+id/create_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/title_create_account"
                    android:textColor="#ffffff "
                    android:textSize="13sp"/>
            <Button
                    android:id="@+id/forgot_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/title_forgot_password"
                    android:textColor="#ffffff "
                    android:textSize="13sp"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>